# matrixclient-testsuite

./: Cargo.toml  Rocket.toml
src/: error.rs  main.rs  ruma_wrapper.rs  tests.rs  utils.rs
src/data/: mod.rs
